# ai-workspace-assistant

./: .env.example  .gitignore  Dockerfile  README.md  data.mcp_servers.example.json  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  schemas.py  security.py
app/routers/: __init__.py  api.py  auth.py  ui.py
app/services/: assistant_service.py  file_storage.py  mcp_client.py  tool_executor.py
app/static/: style.css
app/templates/: assistant.html  base.html  dashboard.html  files.html  index.html  login.html  notes.html  register.html  tasks.html
scripts/: seed_demo_data.py
tests/: test_app.py
