[project]
name = "ai-workspace-assistant"
version = "1.0.0"
description = "An AI workspace assistant built with FastAPI and Python, using MCP tools for automation, search, and productivity workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Raghu Soni" }
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "itsdangerous>=2.2,<3.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic>=2.6,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*"]
